Fixed a bug related to Github icon not showing.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,10 +39,6 @@ body {
   color: #555555;
 }
 
-.github a {
-  fill: #555555;
-}
-
 .hero-title {
   font-size: 4.2rem;
   font-weight: 700;
